--- a/ARRAY/Loop.html
+++ b/ARRAY/Loop.html
@@ -52,11 +52,48 @@
 //   console.log(i);
 // }
 
-arr = [1,2,3,4,5]
-let i;
-for( i=0; i < arr.length; i++ ){
-  console.log(arr[i])
+// arr = [1,2,3,4,5]
+// let i;
+// for( i=0; i < arr.length; i++ ){
+//   console.log(arr[i])
+// }
+
+// let nums = [1,2,3,4,5];
+// let sum = 0;
+// for(let i=0;i<=nums.length;i++){
+//   sum+=i;
+// }
+// console.log(`sum = ${sum}`);
+
+// let sq = [];
+// for(let i = 0; i < nums.length; i++){
+// //  sq[i]=nums[i]*nums[i];
+// sq.push(nums[i]*nums[i]);
+// }
+// console.log(sq)
+
+// for(let i=0; i<10;i++){
+
+//    if(i==5)continue;
+//   // if(i==5)break;
+//   console.log(i);
+
+// }
+
+// let arr = [3,4,5,6,7];
+// for(let i=0; i < arr.length;i++){
+//   if(arr[i] == 5){
+//     console.log(`5 found at index ${i}`);
+//      break;
+//   }
+// }
+
+
+for(let i=0;i < 10; i++){
+  if(i % 2 == 0)continue;
+  console.log(i);
 }
+
 
  </script>
 
