done happy new year practice is the key to success

--- a/ARRAY/Loop.html
+++ b/ARRAY/Loop.html
@@ -89,10 +89,20 @@
 // }
 
 
-for(let i=0;i < 10; i++){
-  if(i % 2 == 0)continue;
-  console.log(i);
-}
+// for(let i=0;i < 10; i++){
+//   if(i % 2 == 0)continue;
+//   console.log(i);
+// }
+
+//for each loop
+let arr = [1,2,3,4];
+arr.forEach(num => console.log(num));
+
+
+let foods = ['rice','vegetables','dal'];
+foods.forEach( food => console.log(food))
+
+
 
 
  </script>
